--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>Hortifruti</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Hortifruti</name>
-	<description>CRUD para um hortifruti com cadastro de funcionarios, clientes, produtos e pedidos</description>
+	<description>projeto com CRUD para funcionarios, clientes, produtos e vendas</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -44,7 +44,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-autoconfigure</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -83,7 +82,7 @@
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
+							<artifactId>${lombok.version}</artifactId>
 							<version>${lombok.version}</version>
 						</path>
 					</annotationProcessorPaths>
