--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.projectlombok</groupId>
-							<artifactId>${lombok.version}</artifactId>
+							<artifactId>lombok</artifactId>
 							<version>${lombok.version}</version>
 						</path>
 					</annotationProcessorPaths>
